corrigi alguns erros e tambem adicionei a função de salvar PDF

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/SistemaPedroPires.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itextpdf-5.5.13.3.jar=C:\\Users\\pedro\\Downloads\\itextpdf-5.5.13.3.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.0.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.itextpdf-5.5.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
